[package]
name = "camcap"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]

[dependencies]
time = "0.1.35"
rscam = "0.5.3"
byteorder = "0.5.3"

[dependencies."webp-sys"]
path = "/home/sell/dev/webp-sys/webp-sys"

[dependencies.fallocate]
path = "/home/sell/dev/lowlevel/fallocate"

[dependencies.surface]
git = "http://github.com/infinityb/surface"